<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View" />
        <import type="com.m800.sdk.core.demo.R" />
        <import type="com.m800.sdk.core.demo.call.CallViewModel"/>
        <import type="com.m800.sdk.core.demo.utils.CustomManager" />
        <variable name="viewModel" type="CallViewModel"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:background="@color/title_black">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:id="@+id/lc_btn_audio_pane"
                android:orientation="vertical"
                style="@style/lc_call_button_pane"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/lc_btn_mute_pane">

                <CheckBox
                    android:id="@+id/lc_btn_audio"
                    style="@style/lc_call_button2" />

                <TextView
                    android:id="@+id/lc_tv_audio"
                    style="@style/call_info.button_text"
                    app:autoSizeTextType="uniform"
                    app:autoSizeMinTextSize="8sp"
                    app:autoSizeMaxTextSize="@dimen/lc_font_size_M"
                    android:text="@string/lc_call_button_speaker"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lc_btn_mute_pane"
                android:orientation="vertical"
                style="@style/lc_call_button_pane"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/lc_btn_audio_pane"
                app:layout_constraintEnd_toStartOf="@+id/lc_btn_hold_pane">

                <CheckBox
                    android:id="@+id/lc_btn_mute"
                    style="@style/lc_call_button2"
                    android:background="@{CustomManager.getColorSelectorLcBgMute(), default=@drawable/call_panel_unmute_icon}"
                    android:onCheckedChanged="@{(view, checked) -> viewModel.setMute(checked)}"/>

                <TextView
                    android:id="@+id/tv_btn_mute"
                    style="@style/call_info.button_text"
                    android:text="@string/lc_call_button_audio" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lc_btn_hold_pane"
                android:orientation="vertical"
                style="@style/lc_call_button_pane"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/lc_btn_mute_pane"
                app:layout_constraintEnd_toEndOf="parent">

                <CheckBox
                    android:id="@+id/lc_btn_hold"
                    style="@style/lc_call_button2"
                    android:background="@{CustomManager.getColorSelectorLcBgHold(), default=@drawable/call_panel_hold_light_icon}"
                    android:onCheckedChanged="@{(view, checked) -> viewModel.setHold(checked)}"/>

                <TextView
                    android:id="@+id/tv_btn_hold"
                    style="@style/call_info.button_text"
                    android:text="@string/lc_call_button_hold"/>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:id="@+id/lc_btn_hangup_pane"
                android:orientation="vertical"
                style="@style/lc_call_button_pane"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/lc_btn_keypad_pane">

                <ImageButton
                    android:id="@+id/lc_btn_hangup"
                    style="@style/lc_call_button2"
                    android:background="@android:color/transparent"
                    android:onClick="@{() -> viewModel.hangup()}"
                    android:src="@{CustomManager.getColorSelectorDeclineButton(), default=@drawable/call_panel_end_icon}"/>

                <TextView
                    style="@style/call_info.button_text"
                    android:text="@string/lc_call_button_endcall"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lc_btn_keypad_pane"
                android:orientation="vertical"
                style="@style/lc_call_button_pane"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/lc_btn_hangup_pane"
                app:layout_constraintEnd_toEndOf="parent"
                android:visibility="@{viewModel.keypadDisplayed ? View.INVISIBLE : View.VISIBLE}"
                android:alpha="1"
                android:clickable="false">

                <ImageButton
                    android:id="@+id/lc_btn_keypad"
                    style="@style/lc_call_button2"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_keypad" />

                <TextView
                    style="@style/call_info.button_text"
                    android:text="@string/lc_keypad_text_title" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lc_btn_hide_pane"
                android:orientation="vertical"
                style="@style/lc_call_button_pane"
                app:layout_constraintTop_toTopOf="@+id/lc_btn_hangup_pane"
                app:layout_constraintBottom_toBottomOf="@+id/lc_btn_hangup_pane"
                app:layout_constraintStart_toEndOf="@+id/lc_btn_hangup_pane"
                app:layout_constraintEnd_toEndOf="parent"
                android:visibility="@{viewModel.keypadDisplayed ? View.VISIBLE : View.GONE}"
                android:alpha="1">

                <TextView
                    style="@style/call_info.button_text"
                    android:text="@string/lc_room_text_hide" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</layout>
